# bionemo-framework

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  404.html  CODE-REVIEW.md  CODEOWNERS  Dockerfile  Dockerfile.arm  Dockerfile.static-resource  Dockerfile.user_mod  Dockerfile.uv  README.md  analyze_sequences.py  artifact_paths  artifact_paths.yaml  benchmark_with_slow_cpu.py  bionemo  compare_layers.py  conftest.py  convert_checkpoints  copy_justfile  dbg.py  download_models.sh  index.html  justfile  launch  mamba.sh  objects.inv  pyproject.toml  pytest.ini  requirements-build.txt  requirements-cve.txt  requirements-dev.txt  requirements-test.txt  run  (+14 more)
bionemo-recipes/interpretability/sparse_autoencoders/: README.md  pyproject.toml
bionemo-recipes/interpretability/sparse_autoencoders/recipes/: README.md
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/: .gitignore  1b_goeval.sh  README.md  codonfm-experiments.md  pyproject.toml  run.py  umap_exploration.ipynb
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/codon-fm/: .gitignore  CODONFM_MODEL_REPORT.md  Dockerfile  README.md  README_RELEASE.md  bio.md  env.example  getting-started.md  jrun.py  merged_seqs_for_validation.csv  requirements.txt
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/dash/: feature_labels.json
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/dash108k/: feature_labels.json
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/dash_438k/: feature_labels.json
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/dash_438k_auto/: feature_labels.json
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/dash_438k_clinvar/: feature_labels.json
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/nndash2/: feature_labels.json
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/notebooks/: 01_quickstart.ipynb  02_codon_analysis.ipynb  03_gene_enrichment.ipynb  04_dashboard.ipynb  05_auto_interp.ipynb  06_probing.ipynb  steering_demo.ipynb
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/olddash/: feature_labels.json
bionemo-recipes/interpretability/sparse_autoencoders/recipes/codonfm/scripts/: analyze.py  dashboard.py  download_codonfm_swissprot.py  eval.py  eval_gene_enrichment.py  eval_swissprot_f1.py  extract.py  launch_dashboard.py  mutation_features.py  train.py
bionemo-recipes/interpretability/sparse_autoencoders/recipes/esm2/: 15b.sh  3b.sh  650m.sh  README.md  run.py
bionemo-recipes/interpretability/sparse_autoencoders/recipes/esm2/protein_dashboard/: README.md
bionemo-recipes/interpretability/sparse_autoencoders/recipes/esm2/scripts/: 15b_sweep.md  3b.sh  650m.sh  eval.py  extract.py  launch_dashboard.py  old_extract.py  train.py
bionemo-recipes/interpretability/sparse_autoencoders/sae/: README.md  pyproject.toml
bionemo-recipes/interpretability/sparse_autoencoders/sae/src/sae/: __init__.py  activation_store.py  analysis.py  collector.py  demo.py  perf_logger.py  process_group_manager.py  steering.py  steering_server.py  training.py
internal/infra-bionemo/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
internal/infra-bionemo/src/infra_bionemo/: license_check.py
internal/infra-bionemo/src/infra_bionemo/new_project/: api.py  templates.py  utils.py
internal/infra-bionemo/src/infra_bionemo/new_project/exe/: bionemo_subpackage.py  namespace.py  simple.py
internal/infra-bionemo/tests/test_infra_bionemo/: test_license_check.py
internal/infra-bionemo/tests/test_infra_bionemo/test_new_project/: test_api.py  test_cli_tools.py  test_utils.py
sub-packages/bionemo-esm2/: README.md  pyproject.toml
sub-packages/bionemo-esm2/examples/: finetune.ipynb  inference.ipynb  mutant-design.ipynb
sub-packages/bionemo-esm2/src/bionemo/esm2/data/: datamodule.py  dataset.py
sub-packages/bionemo-esm2/src/bionemo/esm2/model/: attention.py  convert.py  finetune_token_classifier.py  model.py
sub-packages/bionemo-esm2/src/bionemo/esm2/run/: config_models.py  main.py
sub-packages/bionemo-esm2/tests/bionemo/esm2/: conftest.py
sub-packages/bionemo-geneformer-t/: README.md  pyproject.toml
sub-packages/bionemo-geneformer-t/examples/: train_temporal_geneformer.py
sub-packages/bionemo-geneformer-t/src/bionemo/geneformer_t/: __init__.py
sub-packages/bionemo-moco/: README.md  blog.md  documentation.md  pyproject.toml
sub-packages/bionemo-moco/environment/: Instructions.md  moco.yaml  moco_env.yaml  requirements.txt  setup.sh
sub-packages/bionemo-moco/examples/: continuous_data_interpolant_tutorial.ipynb  continuous_data_interpolant_tutorial_cfm.ipynb  continuous_data_interpolant_tutorial_ddpm.ipynb  continuous_data_interpolant_tutorial_vdm.ipynb  discrete_data_interpolant_tutorial.ipynb  entropic_time_scheduler_tutorial_cfm.ipynb
sub-packages/bionemo-moco/scripts/: clean_documentation.py  create_documentation.sh
sub-packages/bionemo-scbenchmark/: README.md  SCDL_BENCHMARK_README.md  pyproject.toml  scdl_benchmark_standalone.py  test_framework.py  test_instantiation.py
sub-packages/bionemo-scbenchmark/examples/: comprehensive_benchmarking.py  comprehensive_benchmarking_dataset.py  instantiation_benchmarking.py  scdataset_script.py  scddataset_test.py  simple_benchmark_examples.py  time_based_benchmarking.py
sub-packages/bionemo-scbenchmark/src/bionemo/scbenchmark/: __init__.py  benchmark.py  common.py  core.py  protocols.py
sub-packages/bionemo-scbenchmark/tests/: test_benchmark.py
sub-packages/bionemo-scbenchmark/tests/bionemo/scbenchmark/: test_benchmark.py  test_common.py
sub-packages/bionemo-webdatamodule/: README.md  pyproject.toml  setup.py
sub-packages/bionemo-webdatamodule/src/bionemo/webdatamodule/: datamodule.py  utils.py
sub-packages/bionemo-webdatamodule/tests/bionemo/webdatamodule/: conftest.py  test_webdatamodule.py
(+5672 files in other folders)
