[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# For guidance, see: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "infra-bionemo"
version = "0.1.0"
authors = []
description = "Internal library of utilities and programs for BioNeMo-related infrastructure."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Private :: Do Not Upload",
]
dynamic = ["dependencies"]

[project.scripts]
license-check = "infra_bionemo.license_check:entrypoint"
create-bionemo-project = "infra_bionemo.new_project.exe.bionemo_subpackage:entrypoint"
create-py-project = "infra_bionemo.new_project.exe.simple:entrypoint"
create-namespaced-project = "infra_bionemo.new_project.exe.namespace:entrypoint"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# NOTE: Since this project uses the popular src-layout convention, packages are automatically
#       discovered. All packages that are subject to distribution live under src/.

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [ "ignore::DeprecationWarning",]

[tool.coverage.run]
source = ["infra_bionemo"]
