[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-esm2"
readme = "README.md"
description = "BioNeMo ESM2 model."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = [
    # internal
    'bionemo-core',
    'bionemo-llm',
    # external
    'torch>=2.3.0.dev0',  # Nightly build for PyTorch for newest CUDA builds.
]

[project.optional-dependencies]
test = [
    'bionemo-testing'
]
te = [
    # TE & Apex need to be installed after PyTorch, NVCC, and CUDA.
    # TODO(@pstjohn, @cspades): Figure out how to do this without post-installation.
    'transformer_engine[pytorch]'
]
apex = [
    # TE & Apex need to be installed after PyTorch, NVCC, and CUDA.
    # TODO(@pstjohn, @cspades): Figure out how to do this without post-installation.
    'apex@git+https://github.com/NVIDIA/apex.git'
]

[project.scripts]
bionemo-esm2-train= "bionemo.esm2.run.main:main"
bionemo-esm2-recipe= "bionemo.esm2.run.recipes:main"
infer_esm2 = "bionemo.esm2.scripts.infer_esm2:infer_esm2_entrypoint"
train_esm2 = "bionemo.esm2.scripts.train_esm2:train_esm2_entrypoint"
finetune_esm2 = "bionemo.esm2.scripts.finetune_esm2:finetune_esm2_entrypoint"

# Make sure that the tokenizer files are included along with the python files during installation.
[tool.setuptools.package-data]
"bionemo.esm2" = ["data/tokenizer/*.json", "data/tokenizer/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.uv]
cache-keys = [{ git = true }]

[tool.uv.sources]
torch = [
  { index = "pytorch-nightly-cu128" },
]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true
