[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-geneformer-t"
dynamic = ["version"]
description = "Temporal/neighbor-aware fine-tuning for Geneformer"
authors = [
    {name = "NVIDIA Corporation", email = "nemo-toolkit@nvidia.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "bionemo-core",
    "bionemo-llm",
    "bionemo-geneformer",
    "bionemo-scdl",
    "torch>=2.0.0",
    "numpy",
    "scipy",
    "lightning>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.dynamic]
version = {attr = "bionemo.geneformer_t.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
