[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# For guidance, see: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "bionemo-webdatamodule"
authors = [
    { name = "Dejun Lin", email = "dejunl@nvidia.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Private :: Do Not Upload",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.ruff]
lint.ignore = ["C901", "E741", "E501", "E731"]
